# projeto-pratico

./: Cadastro.py  README.md  clientes.csv  pyproject.toml
pages/: 1_Consulta.py
