[project]
name = "projeto-teste-pratico"
version = "0.1.0"
description = ""
authors = [
    {name = "vitormoras",email = "vitor.moras@hotmail.com"}
]
readme = "README.md"
requires-python = ">=3.13"
dependencies = [
    "streamlit (>=1.44.1,<2.0.0)"
]


[build-system]
requires = ["poetry-core>=2.0.0,<3.0.0"]
build-backend = "poetry.core.masonry.api"
